jEdit 5.3 version history
       (changes since jEdit 5.2pre1)
:encoding=UTF-8:

{{{ Version 5.3pre1

Thanks to Björn "Vampire" Kautler, Alan Ezust and Matthieu Casanova for
contributing to this release.

{{{ Bug Fixes

- EnhancedDialog does not throw NullPointerExceptions anymore when checking
  whether a pressed key is the buffer close shortcut. (Björn "Vampire" Kautler)

- When using extra vertical line spacing and a selection foreground color, the
  selected text was painted twice, once with the extra spacing, once without.
  Now the selected text is drawn correctly. (Björn "Vampire" Kautler)

- Make the TextArea a JPanel instead of a JComponent, so that it draws its
  background and set the background color to the Gutter background color. This
  prevents the parent component to shine through, which would e. g. show blue
  edges with the BufferTabs plugin installed and active.
  (Björn "Vampire" Kautler) [Merged into 5.2.x]

- Fix a bug preventing from removing an unloaded plugin
  (#3877 - Matthieu Casanova) [Merged into 5.2.x]

- The native splashscreen is removed as it was not possible to disable it
  (#3876 - Matthieu Casanova) [Merged into 5.2.x]

}}}
{{{ Miscellaneous

- Configure the JUnit task to fork off the Ant process, with manually adding the
  needed Ant libraries. This ensures that there are no unwanted classpath
  entries during test execution (Bug #1732 - Björn "Vampire" Kautler)

- Upgrade Launch4J to the latest version 3.5.0. This makes it possible to UTF-8
  encode the config file and build the EXE launcher on Mac OS again, removing
  the need for Rosetta being installed, which is not supported anymore anyway
  since Mac OS 10.7. (Björn "Vampire" Kautler)

}}}
{{{ API Changes


}}}
{{{ Editing

  - New mode for ANS Forth 1994 (Patch #530 - Dibsco)

}}}

}}}

jEdit buffer local properties:
:maxLineLen=80:wrap=hard:autoIndent=simple:noTabs=true:indentSize=2:tabSize=2:
:folding=explicit:collapseFolds=2: